--- a/css/style.css
+++ b/css/style.css
@@ -1094,6 +1094,12 @@ body {
     visibility: visible;
   }
 
+  .logo-corner-mobile img {
+    -webkit-padding-start: initial;
+    margin-bottom: 0;
+    max-height: -webkit-fill-available;
+  }
+
   .logo-corner-mobile:hover {
     background-image: url(/../img/logobackground.gif);
   }
